# GovAI

./: .gitignore  AGENTS.md  README.md  ai.py  doc-mcp.py  draft-resp_6879aa586f008198a392ee39d14300250835c73911227555.json  draft-resp_6879aa5a2b04819b9bd9c762a36b8efc0462a40934ba8839.json  draft-resp_6879aa5c05b4819b8dee3e3ea514f22606a9775ba3735112.json  draft.json  draft.md  draft_fixed.md  draft_new.md  fix_current_draft.sh  get_job.py  ingest.py  main.py  pyproject.toml  regenerate_all.sh  research-with-mcp.py  summary.json  test_llm_judge.py
data/: chunks.json  flags.json  id_to_idx.json
