[project]
name = "govai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.2",
    "numpy>=2.2.6",
    "openai>=1.93.1",
    "pygithub>=2.6.1",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.15.3",
    "st-diff-viewer>=1.0.7",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
]
